@@ -6,12 +6,13 @@
 #   26-May-2021 jdw Add methods to fetch and deliver Pfam-PDB mappings
 #   20-Sep-2023 dwp Use HTTPS instead of FTP for Pfam data
 #    3-Oct-2023 dwp Use new Pfam mapping file, pdbmap.gz, in place of pdb_pfamA_reg.txt.gz which is no longer updated/supported
+#    3-Jun-2024 dwp Use new Pfam mapping file, pdb_pfam_mapping.tsv.gz (from SIFTS flatfiles), in place of pdbmap.gz,
+#                   as it provides more explicit header information
 ##
 
 import logging
 import os
 import sys
-import re
 from rcsb.utils.io.FileUtil import FileUtil
 from rcsb.utils.io.MarshalUtil import MarshalUtil
 from rcsb.utils.io.StashableBase import StashableBase
@@ -35,7 +36,7 @@ class PfamProvider(StashableBase):
         self.__mU = MarshalUtil(workPath=dirPath)
         self.__pfamD = self.__rebuildCache(urlTargetPfam, urlTargetPfamFB, dirPath, useCache)
 
-        urlTargetMapPfam = kwargs.get("urlTargetMapPfam", "https://ftp.ebi.ac.uk/pub/databases/Pfam/current_release/pdbmap.gz")
+        urlTargetMapPfam = kwargs.get("urlTargetMapPfam", "http://ftp.ebi.ac.uk/pub/databases/msd/sifts/flatfiles/tsv/pdb_pfam_mapping.tsv.gz")
         urlTargetMapPfamFB = "https://github.com/rcsb/py-rcsb_exdb_assets/raw/master/fall_back/Pfam/pdbmap.gz"
         self.__pfamMapD = self.__rebuildMappingCache(urlTargetMapPfam, urlTargetMapPfamFB, dirPath, useCache)
 
@@ -145,11 +146,14 @@ class PfamProvider(StashableBase):
             logger.info("Fetch data from source %s in %s", urlTargetPfam, dirPath)
             fp = os.path.join(dirPath, fU.getFileName(urlTargetPfam))
             ok = fU.get(urlTargetPfam, fp)
-            if not ok:
+            pfamD = {}
+            if ok:
+                pfamD = self.__getPfamMapping(fp)
+            if not (ok and pfamD):
                 fp = os.path.join(dirPath, fU.getFileName(urlTargetPfamFB))
                 ok = fU.get(urlTargetPfamFB, fp)
                 logger.info("Fetch data fallback fetch status is %r", ok)
-            pfamD = self.__getPfamMapping(fp)
+                pfamD = self.__getPfamMapping(fp)
             ok = self.__mU.doExport(pfamDataPath, pfamD, fmt=fmt)
             logger.info("Caching %d in %s status %r", len(pfamD), pfamDataPath, ok)
             # ------
@@ -159,19 +163,16 @@ class PfamProvider(StashableBase):
     def __getPfamMapping(self, filePath):
         """Parse mapping data"""
         pFamMapD = {}
-        encodingD = {"encoding": "ascii"} if sys.version_info[0] < 3 else {}
-        rowL = self.__mU.doImport(filePath, fmt="tdd", rowFormat="list", **encodingD)
-        for row in rowL:
+        dataL = self.__mU.doImport(filePath, fmt="csv", csvDelimiter="\t")
+        for row in dataL:
             try:
-                pdbId = row[0].strip().strip(";").upper()
-                pfamId = row[4].strip().strip(";").upper()
-                authAsymId = row[1].strip().strip(";")
-                seqL = row[2].strip().strip(";").split("-")
-                seqBeg, seqEnd = seqL[0], seqL[1]  # these could contain insertion letters too, so need to parse once more next
-                authSeqBeg = int(re.search(r"\d+", seqBeg).group()) if re.search(r"\d+", seqBeg) else None
-                insertBeg = re.search(r"[A-Za-z]+", seqBeg).group() if re.search(r"[A-Za-z]+", seqBeg) else None
-                authSeqEnd = int(re.search(r"\d+", seqEnd).group()) if re.search(r"\d+", seqEnd) else None
-                insertEnd = re.search(r"[A-Za-z]+", seqEnd).group() if re.search(r"[A-Za-z]+", seqEnd) else None
+                pdbId = row["PDB"].strip().upper()
+                pfamId = row["PFAM_ACCESSION"].strip().upper()
+                authAsymId = row["CHAIN"].strip().upper()
+                authSeqBeg = int(row["AUTH_PDBRES_START"].strip()) if row["AUTH_PDBRES_START"].strip() else None
+                insertBeg = row["AUTH_PDBRES_START_INS_CODE"].strip() if row["AUTH_PDBRES_START_INS_CODE"].strip() else None
+                authSeqEnd = int(row["AUTH_PDBRES_END"].strip()) if row["AUTH_PDBRES_END"].strip() else None
+                insertEnd = row["AUTH_PDBRES_END_INS_CODE"].strip() if row["AUTH_PDBRES_END_INS_CODE"].strip() else None
                 pFamMapD.setdefault(pdbId, []).append(
                     {
                         "pfamId": pfamId,
